kubernetes/apps/base/default/hassproxy/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: hassproxy
    app.kubernetes.io/name: hassproxy
  name: hassproxy
spec:
  hostnames:
    - ${GATUS_SUBDOMAIN}.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: hassproxy
      matches:
        - path:
            type: PathPrefix
            value: /
